[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/mothercheese.png" type="Texture" id=1]
[ext_resource path="res://assets/lupispaceship.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/space.gd" type="Script" id=4]
[ext_resource path="res://assets/mothercheese.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Linear"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 300, 0 ), Vector2( -300, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 56.4186

[node name="Space" type="Node"]
script = ExtResource( 4 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="MotherCheeseHealth" type="ProgressBar" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -331.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/MotherCheeseHealth"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -59.0
margin_right = 59.0
margin_bottom = 18.0
text = "Mother Cheese"
align = 1
valign = 1

[node name="LupiSpaceship" parent="." instance=ExtResource( 2 )]
visible = false

[node name="MotherLair" type="Node2D" parent="."]

[node name="MotherCheese" type="Area2D" parent="MotherLair"]
position = Vector2( 2, 0 )
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MotherLair/MotherCheese"]
anims/Linear = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="MotherLair/MotherCheese"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )
hframes = 4
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="MotherLair/MotherCheese"]
shape = SubResource( 2 )

[node name="RightArm" type="Position2D" parent="MotherLair/MotherCheese"]
position = Vector2( -41.0276, 58.2711 )

[node name="LeftArm" type="Position2D" parent="MotherLair/MotherCheese"]
position = Vector2( 39.8384, 56.4873 )
